[gd_scene load_steps=5 format=3 uid="uid://c21bi0swmoeby"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_2u51w"]

[sub_resource type="LabelSettings" id="LabelSettings_56fw4"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ufnfn"]
font_size = 26

[sub_resource type="LabelSettings" id="LabelSettings_g8po6"]
font_size = 59

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2u51w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.3
offset_bottom = 23.0
grow_horizontal = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER!"
label_settings = SubResource("LabelSettings_56fw4")
horizontal_alignment = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.5
offset_top = -61.0
offset_right = 69.5
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
text = "SCORE:"
label_settings = SubResource("LabelSettings_ufnfn")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer3"]
layout_mode = 2
text = "1000
"
label_settings = SubResource("LabelSettings_g8po6")
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer3"]
layout_mode = 2
text = "TANKS DESTROYED:"
label_settings = SubResource("LabelSettings_ufnfn")
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer3"]
layout_mode = 2
text = "10"
label_settings = SubResource("LabelSettings_g8po6")
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_bottom = 0.85
offset_top = -79.8
offset_right = 116.0
offset_bottom = -6.79999
scale = Vector2(2, 2)
theme_override_constants/separation = 6
alignment = 2

[node name="Button" type="Button" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Button2")
focus_neighbor_bottom = NodePath("../Button2")
focus_next = NodePath("../Button2")
focus_previous = NodePath("../Button2")
text = "MAIN MENU"

[node name="Button2" type="Button" parent="VBoxContainer2"]
custom_minimum_size = Vector2(105, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
focus_neighbor_top = NodePath("../Button")
focus_neighbor_bottom = NodePath("../Button")
focus_next = NodePath("../Button")
focus_previous = NodePath("../Button")
text = "RESTART"

[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
